--- a/src/css/body.css
+++ b/src/css/body.css
@@ -82,13 +82,15 @@ hr{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 0 40px;
 }
 .reviews-title-left{
     display: inline-flex;
     align-items: center;
     flex-direction: row;
     justify-content: flex-start;
-    gap: 6px;
+    gap: 10px;
+    
 }
 .reviews-title-left *{
     margin: 0;
@@ -98,13 +100,28 @@ hr{
     font-size: 18px;
     display: inline-flex;
     align-items: center;
+    
     gap: 10px;
 }
 .reviews-list{
     display:grid;
     grid-template-columns: auto auto;
+    row-gap: 50px;
+    column-gap: 50px;
 
 }
 .reviews-list-contain{
-    width: 45%;
+    display: flex;
+    flex-direction: column;
+}
+.reviews-list-contain-user{
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.reviews-list-contain-user-rating{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
