--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,7 +3,7 @@ footer{
     flex-direction: column;
     justify-items: center;
     align-items: center;
-    margin: 68px 9.11% 130px 9.11%;
+    margin: 0 9.11% 0 9.11%;
     width: 81.78%;
 }
 .email{
@@ -55,4 +55,29 @@ footer{
 .footer-container-column h1{
     font-size: 30px;
     margin-bottom: 5px;
+}
+#footer-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 30px 0;
+    width: 100%;
+    align-items: center;
+}   
+#footer-bottom select{
+    padding: 5px;
+    width: 150px;
+    height: 45px;
+    font-size: 18px;
+    background-color: #f3f4f6;
+    border-color: transparent;
+}
+.footer-image{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.footer-image img{
+    height: 30px;
+    width: 30px;
 }
